<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ithub.mda.elearn.ELearnSignUp">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_elearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/innernamesignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/username_elearn"
        android:id="@+id/email_id_elearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/inneremailsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:inputType="textEmailAddress|textAutoComplete"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/email_id_elearn"
        android:id="@+id/password_elearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:id="@+id/innerpasssignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_password_elearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_elearn">
        <EditText
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:id="@+id/innerconfirmsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/sign_in_with_elearn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/elearn_signup_button"
        android:layout_below="@id/confirm_password_elearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextIcons"/>

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/textview_already_have_an_account"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/elearn_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="14sp"/>

</RelativeLayout>
